# chatbot_mcp

./: README.md
mcp-practice-project/: .gitignore  Makefile
mcp-practice-project/client-examples/: package.json  python-client.py  typescript_client.d.ts  typescript_client.d.ts.map  typescript_client.js  typescript_client.js.map  typescript_client.ts
mcp-practice-project/docs/: DEVELOPMENT.md  README.md
mcp-practice-project/python-server/: pyproject.toml  server.py
mcp-practice-project/python-server/src/mcp_server/: main.py
mcp-practice-project/typescript-server/: package-lock.json  package.json  tsconfig.json
mcp-practice-project/typescript-server/src/: index.ts
mcp-practice-project/typescript-server/src/prompts/: index.ts
mcp-practice-project/typescript-server/src/resources/: index.ts
mcp-practice-project/typescript-server/src/tools/: index.ts
